[gd_scene load_steps=2 format=3 uid="uid://b7wq3fq2iumnr"]

[ext_resource type="Script" path="res://hud/hud.gd" id="1_6nhcg"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6nhcg")

[node name="HungerBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 552.0
offset_top = 6.0
offset_right = 956.0
offset_bottom = 55.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
max_value = 60.0
step = 1.0
value = 60.0
show_percentage = false

[node name="HungerTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="ThirstBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 552.0
offset_top = 58.0
offset_right = 956.0
offset_bottom = 107.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
max_value = 60.0
step = 1.0
value = 60.0
show_percentage = false

[node name="ThirstTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[connection signal="timeout" from="HungerTimer" to="." method="_on_hunger_timer_timeout"]
[connection signal="timeout" from="ThirstTimer" to="." method="_on_thirst_timer_timeout"]
